--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="description" content="Phongxai Vang, Web Designer and Front end developer.">
 	<link rel="icon" href="img/favicon.png">
 
 	<!-- CSS Stylesheets -->
